# docseg

./: .gitignore  Cargo.toml  README.md  clippy.toml
.github/workflows/: pages.yml  publish-model.yml
crates/docseg-core/: Cargo.toml
crates/docseg-core/src/: batch.rs  batch_persist.rs  diff.rs  edit_log.rs  error.rs  geometry.rs  lib.rs  model.rs  postprocess.rs  postprocess_merge.rs  preprocess.rs  reading_order.rs  regions.rs
crates/docseg-core/src/batch/: tests.rs
crates/docseg-core/src/batch_persist/: tests.rs
crates/docseg-core/src/diff/: tests.rs
crates/docseg-core/src/edit_log/: tests.rs
crates/docseg-core/src/error/: tests.rs
crates/docseg-core/src/geometry/: tests.rs
crates/docseg-core/src/model/: tests.rs
crates/docseg-core/src/postprocess/: tests.rs
crates/docseg-core/src/postprocess_merge/: tests.rs
crates/docseg-core/src/preprocess/: tests.rs
crates/docseg-core/src/reading_order/: tests.rs
crates/docseg-core/src/regions/: tests.rs
crates/docseg-core/tests/: end_to_end.rs  forward_pass.rs
crates/docseg-web/: Cargo.toml
crates/docseg-web/src/: canvas.rs  entry.rs  export.rs  lib.rs  render.rs
docs/superpowers/plans/: 2026-04-21-rust-wasm-wgpu-character-segmentation.md  2026-04-22-batch-mode-edit-mode-implementation.md
docs/superpowers/specs/: 2026-04-21-rust-wasm-wgpu-character-segmentation-design.md  2026-04-22-batch-mode-adaptive-design.md  2026-04-22-edit-mode-and-layout-regions-design.md
models/: EXPECTED_SHA256
scripts/: build-web.sh  ci-local.sh  convert-model.py  fetch-model.sh
web/: diff-view.js  filmstrip.js  index.html  main.js  style.css  tools.js
