[workspace]
resolver = "2"
members = ["crates/docseg-core"]

[workspace.package]
edition = "2021"
rust-version = "1.74"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
thiserror = "1"
tracing = { version = "0.1", default-features = false, features = ["std"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
imageproc = { version = "0.25", default-features = false }
geo = "0.28"
bytemuck = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
let_underscore_must_use = "deny"
let_underscore_future = "deny"
await_holding_lock = "deny"
disallowed_types = "deny"
