[package]
name = "docseg-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Per-character document segmentation (preprocess, CRAFT inference, postprocess). No web deps."

[lib]
crate-type = ["rlib"]

[dependencies]
thiserror.workspace = true
tracing.workspace = true
image.workspace = true
imageproc.workspace = true
geo.workspace = true
bytemuck.workspace = true
serde = { workspace = true, optional = true }

[features]
default = ["serde"]
serde = ["dep:serde"]

[lints]
workspace = true

# wonnx pulls in wgpu, which does not build cleanly for bare
# wasm32-unknown-unknown (it wants wasm-bindgen-backed web-sys Gpu* bindings
# that the docseg-web crate will wire up separately). docseg-core on the
# web consumes CRAFT via that future wasm-bindgen path, not via wonnx's
# native session. Restrict wonnx + its runtime deps to non-wasm targets
# so `cargo check --target wasm32-unknown-unknown` on this crate stays green.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.wonnx]
version = "0.5"
default-features = false

# wonnx re-exports `onnx::ModelProto` but not the protobuf `Message` trait
# needed to call `parse_from_bytes`. Pinned to match wonnx's transitive
# protobuf dep so there is one version in the graph. Native-only for the
# same reason as wonnx above.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.protobuf]
version = "2.27"
default-features = false

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
pollster = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
