[package]
name = "docseg-web"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "WASM/browser adapter for docseg-core: image decode, canvas overlay, export zip."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
docseg-core = { path = "../docseg-core" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen = "0.6"
thiserror.workspace = true
tracing.workspace = true
tracing-wasm = "0.2"
console_error_panic_hook = "0.1"
image.workspace = true
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "HtmlImageElement",
  "CanvasRenderingContext2d",
  "ImageData",
  "Blob",
  "Url",
  "Event",
  "MouseEvent",
  "Response",
  "Request",
  "RequestInit",
  "RequestMode",
  "console",
]

[lints]
workspace = true
